Add more information about the work before

--- a/index.html
+++ b/index.html
@@ -429,6 +429,12 @@ blockquote,
                     <div class="profession">Site Reliability Engineer IV</div>
                     <div class="description">
                       Developing the culture of DevSecOps and IaC
+                      <div class="highlights">Highlights</div>
+                      <ul class="list-group">
+                        <li class="list-group-item">Led the team to bring the high reliable observability system</li>
+                        <li class="list-group-item">Tuning the system to support over 300k membership</li>
+                        <li class="list-group-item">Reduced the CI pipeline building time over 50%</li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -455,7 +461,8 @@ blockquote,
                       Revamped the infrastructure and SDLC in Clover
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
-                        <li class="list-group-item">Migrated the infrastructure from simple container runtime to Kubernetes</li>
+                        <li class="list-group-item">Migrated the infrastructure from simple container runtime to Kubernetes within 3 months</li>
+                        <li class="list-group-item">Implemented practice to fillful the HIPAA compliance</li>
                         <li class="list-group-item">Rebuilt CI/CD pipeline</li>
                       </ul>
                     </div>
@@ -484,8 +491,8 @@ blockquote,
                       A full stack developer focusing on cloud technology
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
-                        <li class="list-group-item">Built video encoder control plane with Java and Elixir</li>
-                        <li class="list-group-item">Customized CentOS OS image for rack server</li>
+                        <li class="list-group-item">Built video encoder control plane with Java and Elixir to serve over 10k concurrent users</li>
+                        <li class="list-group-item">Customized and minimized CentOS OS image for rack server</li>
                         <li class="list-group-item">Implemented the infrastructure with Kubernetes and Docker Swarm</li>
                       </ul>
                     </div>
@@ -539,7 +546,7 @@ blockquote,
                     <a href="https:&#x2F;&#x2F;www.gatech.edu&#x2F;" target= "_blank"><i class="fas fa-globe ico"></i> https:&#x2F;&#x2F;www.gatech.edu&#x2F;</a>
                   </div>
                   <p><i class= "fas fa-graduation-cap ico"></i> Master of Science</p>
-                  <p>Computer Science - Computing Systems</p>
+                  <p>Computer Science - Computing Systems Stream</p>
                     <div>Courses</div>
                     <ul class="list-group">
                       <li class="list-group-item">CS6290 High-Performance Computer Architecture</li>
