--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ blockquote,
           <div id="photo-header" class="text-center">
             <!-- PHOTO (AVATAR) -->
             <div id="photo">
-              <img src="&#x2F;&#x2F;www.gravatar.com&#x2F;avatar&#x2F;711b5edf19a92d326806fb2d87be9217?s&#x3D;200&amp;r&#x3D;pg&amp;d&#x3D;mm" alt="avatar">
+              <img src="https:&#x2F;&#x2F;media-exp1.licdn.com&#x2F;dms&#x2F;image&#x2F;C5103AQHUrMA7sHu7Uw&#x2F;profile-displayphoto-shrink_400_400&#x2F;0&#x2F;1571293195004?e&#x3D;1640822400&amp;v&#x3D;beta&amp;t&#x3D;-AVwDqP0K625VxKrIfmpEirxLjLKg-tRbmUv03eUlnc" alt="avatar">
             </div>
             <div id="text-header" >
               <h1>Ryan Siu<br><span>Site Reliability Engineer</span></h1>
